errors.txt
    Checking embassy800c v0.1.0 (C:\Users\texvi\source\repos\rust\test)
error[E0428]: the name `__logic_task_task` is defined multiple times
   --> src\main.rs:212:1
    |
206 | #[embassy_executor::task]
    | ------------------------- previous definition of the value `__logic_task_task` here
...
212 | #[embassy_executor::task]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ `__logic_task_task` redefined here
    |
    = note: `__logic_task_task` must be defined only once in the value namespace of this module
    = note: this error originates in the attribute macro `embassy_executor::task` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `logic_task` is defined multiple times
   --> src\main.rs:212:1
    |
206 | #[embassy_executor::task]
    | ------------------------- previous definition of the value `logic_task` here
...
212 | #[embassy_executor::task]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ `logic_task` redefined here
    |
    = note: `logic_task` must be defined only once in the value namespace of this module
    = note: this error originates in the attribute macro `embassy_executor::task` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> src\main.rs:97:19
    |
 97 |     spawner.spawn(logic_task(leds, relays)).unwrap();
    |                   ^^^^^^^^^^       ------ unexpected argument #2 of type `AlarmRelays`
    |
note: function defined here
   --> src\main.rs:207:10
    |
207 | async fn logic_task(mut leds: StatusLeds) {
    |          ^^^^^^^^^^
help: remove the extra argument
    |
 97 -     spawner.spawn(logic_task(leds, relays)).unwrap();
 97 +     spawner.spawn(logic_task(leds)).unwrap();
    |

warning: variable does not need to be mutable
   --> src\main.rs:111:22
    |
111 |     let (mut device, mut serial) = hardware::build_usb(driver, res);
    |                      ----^^^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> src\main.rs:208:5
    |
208 |     run_logic(leds).await;
    |     ^^^^^^^^^------ argument #2 of type `&mut AlarmRelays` is missing
    |
note: function defined here
   --> src\main.rs:217:10
    |
217 | async fn run_logic(mut leds: StatusLeds, #[cfg(feature = "receiver")] relays: &mut AlarmRelays) {
    |          ^^^^^^^^^                       -----------------------------------------------------
help: provide the argument
    |
208 |     run_logic(leds, /* &mut AlarmRelays */).await;
    |                   ++++++++++++++++++++++++

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> src\main.rs:213:10
    |
213 | async fn logic_task(leds: StatusLeds, mut relays: AlarmRelays) {
    |          ^^^^^^^^^^                       ------ unexpected argument #2 of type `AlarmRelays`
    |
note: function defined here
   --> src\main.rs:207:10
    |
207 | async fn logic_task(mut leds: StatusLeds) {
    |          ^^^^^^^^^^

error[E0063]: missing field `alarms` in initializer of `SystemSensors`
   --> src\hardware.rs:298:19
    |
298 |     let sensors = SystemSensors {
    |                   ^^^^^^^^^^^^^ missing `alarms`

Some errors have detailed explanations: E0061, E0063, E0428.
For more information about an error, try `rustc --explain E0061`.
warning: `embassy800c` (bin "embassy800c") generated 1 warning
error: could not compile `embassy800c` (bin "embassy800c") due to 6 previous errors; 1 warning emitted
